результат сохранется в Excel файле, ссылку для скачивания получаем по запросу.